2005-09-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* gen_peg_canon.tcl: Fixed frink warnings.
	* analysis_peg_emodes.tcl (compute): Fixed inconsistency in return
	  values.

2005-08-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ../../apps/page.man: Updated the documentation to list the two
	  new plugins.

	* plugins/writer_identity.tcl: Additional reader and writer plugins.
	* plugins/reader_treeser.tcl:  The writer dumps the incoming data
	  as is, for inspection. The reader takes a tree serialization,
	  validates it as such and then simply passes this one.

	* util_peg.tcl: Bugfixes in the computation of symbol(Node) for
	  tree nodes. Wrong var name, and missing tree reference. Also
	  change of output to stderr to use the regular page logging
	  instead.

	* util_norm_peg.tcl: Extended the code flattening nested x and /
	  operators to transform x and / operators without children into
	  epsilon's.

	* gen_peg_ser.tcl: Fixed output going directly to stderr to go
	  directly through the regular page logging.

2005-07-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ../../examples/page: Renamed the directory examples/pg to the
	  proper name now in use.

	* modules/page/plugins/reader_lemon.tcl: Reworked feedback generation
	* modules/page/plugins/reader_peg.tcl:   to properly signal end of
	* modules/page/plugins/reader_ser.tcl:   reading, for good linebreaks
	* modules/page/plugins/reader_hb.tcl:    in the output. Added to the
	* ../../apps/page:                  plugins, manager, and application.
	* pluginmgr.tcl:

	* modules/page/plugins/transform_reach.tcl: Added generic feature
	* modules/page/plugins/transform_use.tcl:   query command to plugin
	* modules/page/plugins/reader_lemon.tcl:    manager and plugins.
	* modules/page/plugins/writer_null.tcl: Added code to application,
	* modules/page/plugins/writer_tree.tcl: manager and plugins to ask